# medicina-laboral

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  SISTEMA.md  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 049cc680e4b7_usuarios_table.py  142ccb53835a_all_tables.py  8cee745dc897_add_obra_social_nro_carnet_to_empleados.py  958076442bc7_add_modo_constatacion_to_licencias.py  b5f2a7d9e1c3_clinical_features.py  c616894c3934_empty_initial.py  cf57f12cf1af_auditoria_table.py  d8a1e3f5b2c4_diagnostico_texto_libre.py  e614aa488ccc_add_configuracion_table.py
backend/app/: main.py
backend/app/core/: db.py  db_base.py  deps.py  ids.py  jwt.py  logging.py  middleware.py  permissions.py  security.py  settings.py  storage.py  throttle.py
backend/app/modules/adjuntos/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/areas/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/atenciones/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/auditoria/: decorator.py  (+2 more)
backend/app/shared/: error_handler.py  exceptions.py
backend/scripts/: seed_dev.py
backend/tests/: conftest.py  test_healthz.py
backend/tests/core/: test_db.py  test_deps.py  test_ids.py  test_jwt.py  test_logging.py  test_readyz.py  test_security.py  test_settings.py  test_throttle.py
backend/tests/modules/: conftest.py
backend/tests/shared/: test_error_handler.py
(+171 files in other folders)
